fixed button overflow bug #39

--- a/src/common.blocks/login-form/login-form.scss
+++ b/src/common.blocks/login-form/login-form.scss
@@ -37,6 +37,6 @@
 
   &__registration-button {
     height: rem(44);
-    width: rem(99);
+    width: rem(102);
   }
 }
